@@ -3,5 +3,8 @@ Open Vehicle Monitor System v3 - Change log
 ????-??-?? MWJ  3.0.991  OTA release
                          - Update ovms_module to use new API for per-task heap info.
                          - Commands "time status" and "time set" for access to real-time clock.
+                         - Time zone support in config vehicle/timezone
+                           See GNU LIBC documentation for details on format
+                           https://www.gnu.org/software/libc/manual/html_node/TZ-Variable.html
 
 2018-02-21 MWJ  3.0.990  Handle case of SIMCOM modem MUX down during data states
